# DeFi10

./: .gitignore  AGENTS.md  CLAUDE.md  DeFi10.sln  MyWebWallet.API  MyWebWallet.sln  README.md  package-lock.json
.claude/: settings.local.json
.claude/agents/: rust-perf-auditor.md
.claude/skills/branch/: SKILL.md
.claude/skills/commit/: SKILL.md
.claude/skills/pr/: SKILL.md
.claude/skills/pr-check/: SKILL.md
.github/: ISSUE_TEMPLATE.md  RELEASE_TEMPLATE.md  pull_request_template.md
.github/workflows/: ci.yml  dotnet-test-coverage.yml  e2e.yml  rust-tests.yml  test.yml
backend/: .env.example  .gitignore  CONFIGURACAO_INFURA.md  DYNAMIC_JOB_EXPANSION.md  Dockerfile  MIGRACAO_MORALIS.md  README.md  TestKaminoAggregation.cs  UNISWAP_LOGGING_GUIDE.md  UNISWAP_UNCOLLECTED_FEES_ISSUE.md  backend.sln  render.yaml
backend-rust/: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  Dockerfile.test  Dockerfile.worker  Dockerfile.worker.dev  README.md  docker-compose.yml  render.yaml
backend-rust/.cargo/: config.toml
backend-rust/.github/workflows/: ci.yml
backend-rust/config/: default.toml
backend-rust/crates/aggregation/: Cargo.toml
backend-rust/crates/aggregation/src/: data_aggregator.rs  lib.rs  price_aggregator.rs
backend-rust/crates/api/: Cargo.toml
backend-rust/crates/api/src/: main.rs  routes.rs  state.rs
backend-rust/crates/api/src/handlers/: aggregations.rs  auth.rs  health.rs  history.rs  image_proxy.rs  mod.rs  portfolio.rs  positions.rs  pow.rs  prices.rs  proxy.rs  shared.rs  strategies.rs  tokens.rs  wallet.rs  wallet_groups.rs  wallet_item.rs
backend-rust/crates/api/src/middleware/: auth.rs  error.rs  mod.rs
backend-rust/crates/api/src/worker/: mod.rs  processor.rs
backend-rust/crates/blockchain/: Cargo.toml
backend-rust/crates/blockchain/src/: evm.rs  lib.rs  solana.rs  traits.rs
backend-rust/crates/core/: Cargo.toml
backend-rust/crates/core/src/: aggregation.rs  analytics.rs  chain.rs  error.rs  http_helpers.rs  lib.rs  pow.rs  protocol.rs  snapshot.rs  strategy.rs  token_decimals.rs  wallet_group.rs
backend-rust/crates/core/src/types/: mod.rs  token.rs  wallet.rs
backend-rust/crates/infrastructure/: Cargo.toml
backend-rust/crates/infrastructure/src/: config.rs  lib.rs  logging.rs  pow_service.rs  price_hydration_service.rs  protocol_factory.rs  purchase_window_service.rs  retry.rs  strategy_service.rs  token_logo_service.rs
backend-rust/crates/infrastructure/src/aggregation/: job_manager.rs  mod.rs  publisher.rs
backend-rust/crates/infrastructure/src/cache/: mod.rs  redis_cache.rs
backend-rust/crates/infrastructure/src/database/: mod.rs  mongo.rs  raydium_position_repository.rs  snapshot_repository.rs  strategy_migration.rs  token_metadata_repository.rs  wallet_group_repository.rs
backend-rust/crates/infrastructure/src/messaging/: mod.rs  rabbitmq.rs
backend-rust/crates/protocols/: Cargo.toml
backend-rust/crates/protocols/src/: lib.rs  registry.rs  types.rs
backend-rust/crates/protocols/src/aave/: adapter.rs  mod.rs  models.rs  service.rs
backend-rust/crates/protocols/src/kamino/: adapter.rs  mod.rs  models.rs  service.rs  service_mocked_tests.rs
backend-rust/crates/protocols/src/pendle/: adapter.rs  mod.rs  models.rs  service.rs  service_mocked_tests.rs
backend-rust/crates/protocols/src/raydium/: adapter.rs  mod.rs  models.rs  position_store.rs  service.rs  service_mocked_tests.rs
backend-rust/crates/protocols/src/uniswap/: adapter.rs  mod.rs  models.rs  service.rs  service_mocked_tests.rs
backend-rust/crates/protocols/tests/: aave_tests.rs
backend-rust/crates/worker/: Cargo.toml
backend-rust/crates/worker/src/: lib.rs  main.rs  processor.rs  snapshot_save.rs  sweep.rs
backend-rust/docs/: RATE_LIMITING_PLAN.md
backend/.github/workflows/: README.md  dotnet-tests.yml  nightly.yml  test.yml
backend/DeFi10.API/: DeFi10.API.csproj  Program.cs  appsettings.json
backend/DeFi10.API.IntegrationTests/: .gitignore  AaveSubgraphSchemaTest.cs  AaveTransactionHistoryTests.cs  AaveTransactionHistoryTheGraphTests.cs  DeFi10.API.IntegrationTests.csproj  KaminoCbBtcMetadataTest.cs  KaminoIntegrationTests.cs  KaminoReservesApiTests.cs  KaminoUserPositionsTests.cs  MoralisCbBtcLogoTest.cs  MoralisDeFiPositionsTests.cs  MoralisNFTDetectionTests.cs  MoralisSolanaCbBtcTest.cs  README.md  RaydiumApiServiceTests.cs  RaydiumIntegrationTests.cs  RaydiumOnChainServiceTests.cs  UniswapIntegrationTests.cs  UniswapPositionRealDataTests.cs  UniswapUncollectedFeesTests.cs  appsettings.example.json
backend/DeFi10.API.Tests/: DeFi10.API.Tests.csproj  ExampleCategorizedTests.cs  KaminoIntegrationTests.cs  README.md  RaydiumActualTickDataTests.cs  RaydiumApiServiceTests.cs  RaydiumFeeCalculationTests.cs  RaydiumIntegrationTests.cs  RaydiumIntegrationTestsSuccess.cs  RaydiumOnChainServiceTests.cs  RaydiumTickArrayParsingTests.cs  appsettings.example.json
backend/DeFi10.API.Tests/Aggregation/: PriceServiceTests.cs  (+2 more)
backend/MyWebWallet.API/: Dockerfile  MyWebWallet.API.csproj  Program.cs  appsettings.Production.json  appsettings.json
backend/MyWebWallet.API.Tests/: MyWebWallet.API.Tests.csproj  RaydiumIntegrationTests.cs  RaydiumIntegrationTestsSuccess.cs  RaydiumMath.cs  RaydiumMathTests.cs  RaydiumOnChainServiceTests.cs
docs/: BATCH_TOKEN_HYDRATION.md  CHAIN_ICON_URLS.md  CHAIN_SUPPORT.md  MULTI_CHAIN_EXAMPLES.md  REDIS_CACHE.md  SUPPORTED_CHAINS_API.md  TOKEN_LOGO_EXPIRATION.md  TOKEN_LOGO_HYDRATION.md  TOKEN_LOGO_IMPLEMENTATION.md  TOKEN_LOGO_PRESERVATION.md
e2e/: package-lock.json  package.json  playwright.config.ts
e2e/tests/: aggregation.spec.ts  strategies.spec.ts  wallet-auth.spec.ts  wallet-groups.spec.ts  wallet-strategies.spec.ts
frontend/: .env.example  .env.production  .eslintrc.cjs  README.md  index.html  package-lock.json  package.json  render.yaml  server.cjs  tsconfig.json  vite.config.ts
frontend/public/: _redirects
frontend/src/: App.css  App.jsx  App.tsx  App_clean.jsx  App_corrupted.jsx  App_new.jsx  global.css  main.jsx  main.tsx  strategy-module.ts  styles.css
(+715 files in other folders)
