[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/infrastructure",
    "crates/protocols",
    "crates/blockchain",
    "crates/aggregation",
    "crates/api",
    "crates/worker",
]
default-members = ["crates/api"]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
authors = ["DeFi10 Team"]
license = "MIT"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.41", features = ["full"] }
tokio-util = "0.7"
tokio-stream = "0.1"
async-trait = "0.1"

futures-util = "0.3"
# Web framework
axum = { version = "0.7", features = ["macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors", "timeout", "limit"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_repr = "0.1"

# Database & Cache
mongodb = { version = "3.1", features = ["sync"] }
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }

# Messaging
lapin = "2.5"

# Blockchain
ethers = { version = "2.0", features = ["ws", "rustls"] }
solana-client = "2.1"
solana-sdk = "2.1"
solana-account-decoder = "2.1"

# HTTP client
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
openssl = { version = "0.10", features = ["vendored"] }
openssl-sys = { version = "0.9", features = ["vendored"] }

# Auth & Security
jsonwebtoken = "9.3"
bcrypt = "0.16"
sha2 = "0.10"
hex = "0.4"
rand = "0.8"

# Configuration
config = "0.14"
dotenvy = "0.15"

# Logging & Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Validation
validator = { version = "0.19", features = ["derive"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Utilities
uuid = { version = "1.11", features = ["v4", "serde"] }
bytes = "1.8"

# Testing
mockito = "1.6"
wiremock = "0.6"
testcontainers = "0.23"
testcontainers-modules = { version = "0.11", features = ["mongo", "redis", "rabbitmq"] }

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.test]
opt-level = 1


