[package]
name = "defi10-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde_repr = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
validator = { workspace = true }
axum = { workspace = true, optional = true }
reqwest = { workspace = true, optional = true }

[features]
axum = ["dep:axum"]
http = ["dep:reqwest"]

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
