[package]
name = "defi10-worker"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "defi10-worker"
path = "src/main.rs"

[dependencies]
defi10-core = { path = "../core", features = ["http"] }
defi10-infrastructure = { path = "../infrastructure" }
defi10-protocols = { path = "../protocols" }
defi10-blockchain = { path = "../blockchain" }

# Async runtime
tokio = { workspace = true }
async-trait = { workspace = true }
futures-util = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Messaging
lapin = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# HTTP client for price feeds
reqwest = { workspace = true }

# Error handling
anyhow = { workspace = true }

# Time
chrono = { workspace = true }

# UUID
uuid = { workspace = true }
# Ensure OpenSSL is vendored for Windows
dotenvy = { workspace = true }

[build-dependencies]
openssl-src = "300"